# twitter_report

./: README.md  build.sh  fill_db.py  pyproject.toml  render.yaml  requirements.txt
data/: report_twitter_user.csv  report_twitter_user_stats.csv
report/: apps.py
report/migrations/: 0001_initial.py
report/scheduler/: credentials.json  scheduler.py  update_db.py
report/templates/report/: detail.html  twitter_user_list.html
twitter_report/: settings.py  urls.py
