[tool.poetry]
name = "twitter-report"
version = "0.1.0"
description = ""
authors = ["Antonio <antoniotropiano@gmail.com>"]
readme = "README.md"
packages = [{include = "twitter_report"}]

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.2"
dj-database-url = "0.5.0"
psycopg2-binary = "^2.9.4"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"
APScheduler = "^3.9.1"
django-apscheduler = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
